<resources>
    <string name="app_name">Lesson_2_Zhuravleva</string>
    <string name="to_first_activity">To First Activity</string>
    <string name="to_second_activity">To Second Activity</string>
    <string name="to_third_activity">To Third Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="to_next">Next</string>
    <string name="to_first_fragment">1</string>
    <string name="to_second_fragment">2</string>
    <string name="to_third_fragment">3</string>
    <string name="pushkin_poem">Sorry, there is nothing</string>
    <string name="btn_one">Button 1</string>
    <string name="error_msg">You\'re already here</string>
    <string name="basic_text">Press \"Next\" to change me</string>
</resources>