<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:guidelineUseRtl="true"
    tools:context=".secondpart.ThirdFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/btn_one"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnToFirstFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_first_fragment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnToSecondFragment"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/btnToSecondFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_second_fragment"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btnToFirstFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnToThirdFragment"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/btnToThirdFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_third_fragment"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btnToSecondFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>