<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:orientation="vertical"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnToFirstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_first_activity"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnToSecondActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_second_activity"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnToThirdActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_third_activity"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>